[package]
name = "nydus-utils"
version = "0.3.1"
description = "Utilities and helpers for Nydus Image Service"
authors = ["The Nydus Developers"]
license = "Apache-2.0 OR BSD-3-Clause"
homepage = "https://nydus.dev/"
repository = "https://github.com/dragonflyoss/image-service"
edition = "2018"

[dependencies]
blake3 = "1.3"
flate2 = { version = "1.0", features = ["zlib-ng"], default-features = false }
lazy_static = "1.4"
libc = "0.2"
log = "0.4"
lz4-sys = "1.9.4"
lz4 = "1.24.0"
serde = { version = ">=1.0.27", features = ["serde_derive", "rc"] }
serde_json = ">=1.0.9"
sha2 = "0.10.0"
tokio = { version = "1.19.0", features = ["rt", "sync"] }
zstd = "0.11"
nix = "0.24"

nydus-error = { version = "0.2", path = "../error" }

[target.'cfg(target_arch = "powerpc64le")'.dependencies]
libz-sys = { version = "1.1.8", optional = true }
[target.'cfg(not(target_arch = "powerpc64le"))'.dependencies]
libz-sys = { version = "1.1.8", package = "libz-ng-sys", optional = true }

[dev-dependencies]
vmm-sys-util = ">=0.9.0"
tar = "0.4.38"

[features]
zran = ["libz-sys"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu", "aarch64-apple-darwin"]
